--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Jogo da memória</h1>
+        <h1 id="titulo">Jogo da memória</h1>
     </header>
 
     <main>
