--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Jogo da memória</title>
 </head>
-<body>
+<body id="body-imagem">
     <header>
         <h1 id="titulo">Jogo da memória</h1>
     </header>
 
     <main>
         <div class="container">
+            <audio class="virarCarta" src="som/virando.mp3"></audio>
             <button class="botao" id="botao1"><img class="imagem" src="img/comum.png" alt="Carta 1" width="" height=""></button>
             <button class="botao" id="botao2"><img class="imagem" src="img/comum.png" alt="Carta 2" width="" height=""></button>
             <button class="botao" id="botao3"><img class="imagem" src="img/comum.png" alt="Carta 3" width="" height=""></button>
