--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Jogo da memória</title>
 </head>
 <body id="body-imagem">
+    <!-- <img id="imagem-fundo" src="img/fundo.jpeg" alt="matrix"> -->
+    <!-- <div id="ganhou"></div> -->
     <header>
         <h1 id="titulo">Jogo da memória</h1>
     </header>
@@ -15,6 +17,7 @@
     <main>
 
         <audio id="musica" src="som/matrix.mp3"></audio>
+        <audio id="musica-vitoria" src="som/vitoria.mp3"></audio>
 
         <div class="container">
             <audio class="virarCarta" src="som/virando.mp3"></audio>
